// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav rendering renders expected elements 1`] = `
<Context.Provider
  value={true}
>
  <nav
    aria-hidden={false}
    className="SideNav"
  >
    child
  </nav>
</Context.Provider>
`;

exports[`SideNav rendering renders expected elements when className is set 1`] = `
<Context.Provider>
  <nav
    aria-hidden={true}
    className="SideNav TestClass"
  >
    child
  </nav>
</Context.Provider>
`;
